Added landingpage and dashboard

--- a/users/static/users/css/style.css
+++ b/users/static/users/css/style.css
@@ -494,3 +494,12 @@ details pre {
 .setup-actions .btn {
     min-width: 150px;
 }
+
+.dashboard-welcome {
+    padding: 2rem;
+}
+
+.dashboard-welcome h1 {
+    margin-bottom: 1rem;
+    color: #333;
+}
