changed home.html to landingpage.html

--- a/users/templates/users/landingpage.html
+++ b/users/templates/users/landingpage.html
@@ -7,7 +7,7 @@
     <title>Landing Page</title>
     {% load static %}
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'users/css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'users/css/landingpage.css' %}">
 </head>
 <body>
     <nav class="top-nav">
@@ -173,7 +173,7 @@
         </footer>
     </main>
 
-    <script src="{% static 'users/js/home.js' %}"></script>
+    <script src="{% static 'users/js/landingpage.js' %}"></script>
 
 </body>
 </html> 
