--- a/users/templates/users/account.html
+++ b/users/templates/users/account.html
@@ -1,6 +1,6 @@
 {% extends 'users/base.html' %}
 
-{% block title %}Account - UMPIRE Interview Prep{% endblock %}
+{% block title %}Account{% endblock %}
 
 {% block content %}
 <div class="account-container">
