--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,7 +1,7 @@
 <!-- users/templates/users/login.html -->
 {% extends 'users/base.html' %}
 
-{% block title %}Login - UMPIRE Interview Prep{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
 <div class="auth-container">
