--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,7 +1,7 @@
 <!-- users/templates/users/register.html -->
 {% extends 'users/base.html' %}
 
-{% block title %}Register - UMPIRE Interview Prep{% endblock %}
+{% block title %}Register{% endblock %}
 
 {% block content %}
 <div class="auth-container">
