--- a/users/templates/users/verify_email.html
+++ b/users/templates/users/verify_email.html
@@ -1,6 +1,6 @@
 {% extends 'users/base.html' %}
 
-{% block title %}Verify Email - UMPIRE Interview Prep{% endblock %}
+{% block title %}Verify Email{% endblock %}
 
 {% block content %}
 <div class="auth-container">
