--- a/interview_technical/templates/interview_technical/index.html
+++ b/interview_technical/templates/interview_technical/index.html
@@ -26,9 +26,11 @@
                 <div id="chat-messages"></div>
                 <div id="chat-input">
                     <textarea id="user-input" rows="2" placeholder="Type a message"></textarea>
-                    <button id="send-button">Send</button>
-                    <button id="voice-button">🎤</button>
-                    <button id="leave-button">Leave</button>
+                    <div class="button-group">
+                        <button id="send-button">Send</button>
+                        <button id="voice-button">🎤</button>
+                        <button id="leave-button">Leave</button>
+                    </div>
                 </div>
             </div>
         </div>
