--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 <div class="dashboard-welcome">
-    <h1>Welcome, {{ user.username }}!</h1>
+    <h1>Welcome!!, {{ user.username }}!</h1>
 </div>
 {% endblock %} 
